공통 fetch 및 parser 구조로 리팩토링, 사이트별 설정 추가, main.py 실행 구조 개선

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,14 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# 크롤링 데이터
+data/
+
+# VSCode 설정
+.vscode/
+
+# Selenium WebDriver
+drivers/
+chromedriver
+geckodriver
